--- a/cover.html
+++ b/cover.html
@@ -1,52 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Website</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 0 20px;
-        }
-        h1 {
-            color: #ffffff;
-        }
-        p {
-            color: #000000;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Student Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Personal Website</h1>
-    </header>
-    <div class="container">
-        <h2>About Me</h2>
-        <p>I'm Manasa, a CS major at The Univeristy of Maryland, College Park. I love films and TV and enjoy cooking!</p>
-        
-        <h2>My Interests</h2>
-        <ul>
-            <li>Coding</li>
-            <li>Writing</li>
-            <li>Travelling</li>
-        </ul>
-        
-        <h2>Contact Me</h2>
-        <p>You can reach me at: mvinodku@terpmail.umd.edu</p>
+  <header>
+    <div class="header-content">
+      <h1>Welcome to <span>Manasa</span>'s Portfolio</h1>
+      <a href="#" class="btn-download">Download Resume</a>
+      <div class="arrow"></div>
     </div>
+  </header>
+  
+  <section class="about">
+    <div class="about-content">
+      <h2>About Me</h2>
+      <img src="profile.jpg" alt="[Student's Name]">
+      <p>Hello! I'm Manasa, a passionate college student programmer with a love for coding and creating innovative solutions. I'm currently pursuing a degree in Computer Science and actively seeking opportunities to expand my knowledge and skills in software development.</p>
+    </div>
+  </section>
+
+  <section class="contact">
+    <div class="contact-content">
+      <h2>Contact Me</h2>
+      <form action="#">
+        <input type="text" placeholder="Your Name">
+        <input type="email" placeholder="Your Email">
+        <textarea placeholder="Your Message"></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </div>
+  </section>
+
+  <footer>
+    <p>Ready to take your projects to the next level? Let's connect!</p>
+  </footer>
 </body>
 </html>
