--- a/cover.html
+++ b/cover.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Student Portfolio</title>
   <link rel="stylesheet" href="design.css">
+  <link rel="stylesheet" href="cover.css">
 </head>
 <body>
   <header>
