functional basic website

--- a/cover.html
+++ b/cover.html
@@ -3,30 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Portfolio</title>
+  <title>Manasa's Portfolio</title>
   <link rel="stylesheet" href="design.css">
-  <link rel="stylesheet" href="curtain.css">
 </head>
 <body>
   <header>
     <div class="header-content">
       <h1>Welcome to <span>Manasa</span>'s Portfolio</h1>
-      <a href="#" class="btn-download">Download Resume</a>
-      <div class="arrow"></div>
+      <a href="Resume.pdf" class="btn-download">Download Resume</a>
     </div>
   </header>
   
   <section class="about">
     <div class="about-content">
       <h2>About Me</h2>
-      <img src="profile.jpg" alt="[Student's Name]">
+      <img src="placeholder-img.jpg" alt="Manasa">
       <p>Hello! I'm Manasa, a passionate college student programmer with a love for coding and creating innovative solutions. I'm currently pursuing a degree in Computer Science and actively seeking opportunities to expand my knowledge and skills in software development.</p>
     </div>
   </section>
 
   <section class="contact">
     <div class="contact-content">
-      <h2>Contact Me</h2>
+      <h2>Contact Me!</h2>
       <form action="#">
         <input type="text" placeholder="Your Name">
         <input type="email" placeholder="Your Email">
